# genie

./: .gitattributes  .gitignore  LICENSE  README.md  dune-project  genie.opam  genie.opam.template
archive/djinn/: dj_input.c  djinn.c  djinn.h  djinn_export.h  std.h
archive/djinn/shaders/: glyph.vert
dev-tools.locks/odoc/: crunch.pkg  lock.dune  odoc-parser.pkg  odoc.pkg  tyxml.pkg
djinn/: Makefile  caml_djinn.c  darray.h  dj_input.c  djinn.c  djinn.h  djinn.ml  djinn_export.h  djinn_sys.ml  dune  input.c  input.h  render.c  render.h  std.h  text.c  text.h  ui.h
djinn/shaders/: glyph.frag  rectangle.frag  rectangle.vert
dune.lock/: containers.pkg  lens.pkg  lock.dune  patch.pkg  raylib.pkg  signal.pkg
examples/basic/: dune  main.ml
genie/: button.ml  checkbox.ml  color.ml  components.ml  constraints.ml  djinn_wrapper.ml  draw.ml  dune  input.ml  maths.ml  redux.ml  styles.ml  text.ml  ui.ml  utils.ml
genie/components/: button.ml  checkbox.ml  dune  text.ml
test/: dune
