(library
  (name djinn)
 (foreign_stubs
  (language c)
  (names djinn caml_djinn)
  (include_dirs vendor/glad/include vendor/glad/include/glad/ vendor/glfw-3.3.8/include)
  (flags
   (:standard -O2 -lglfw))))

(rule
 (alias all)
 (targets
   djinn.ml
   caml_djinn.c
  )
 (deps djinn.h std.h)
 (action
  (run
   %{bin:ocaml-bindgen} djinn.h djinn))
 (mode
  (promote (until-clean))))