(library
 (name djinn)
 (c_library_flags (-lglfw))
 (foreign_stubs
  (language c)
  (names caml_djinn)
  (include_dirs
   vendor/glad/include
   vendor/glad/include/glad
   vendor/stb_truetype
   vendor/glfw-3.3.8/include)
  (flags
   (:standard -O2)))
 (foreign_archives libdjinn))

(include_subdirs unqualified)

(foreign_library
 (archive_name libdjinn)
 (language c)
 (enabled_if true)
 (names djinn dj_input render text glad)
 (flags
  (:standard -O2 -lglfw))
 (include_dirs vendor/glad/include vendor/stb_truetype))

(rule
 (alias all)
 (targets djinn.ml caml_djinn.c)
 (deps djinn_export.h djinn.h input.h render.h std.h text.h)
 (action
  (run %{bin:ocaml-bindgen} djinn_export.h djinn))
 (mode
  (promote (until-clean))))
